[gd_scene load_steps=7 format=3 uid="uid://m1ihmnbq3l21"]

[ext_resource type="Script" path="res://Scenes/unit_info_display.gd" id="1_gide5"]
[ext_resource type="Texture2D" uid="uid://buxmh6qsv15dy" path="res://img/units/humanoids/humans/peasant.png" id="1_x2w54"]
[ext_resource type="Texture2D" uid="uid://chwsvjk2sqouj" path="res://img/buff-icons/mana1.png" id="2_drw28"]
[ext_resource type="Texture2D" uid="uid://cf4y66dshle5x" path="res://img/buff-icons/fist.png" id="3_jf3s7"]
[ext_resource type="Texture2D" uid="uid://cci6gbkrlx3fa" path="res://img/buff-icons/fortify.png" id="4_h1q2o"]

[sub_resource type="LabelSettings" id="LabelSettings_htnlb"]
font_size = 14

[node name="UnitInfoDisplay" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -852.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gide5")
arcana_image = ExtResource("2_drw28")
power_image = ExtResource("3_jf3s7")
fortitude_image = ExtResource("4_h1q2o")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="UnitPicture" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_x2w54")
stretch_mode = 2

[node name="UnitName" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[font_size=24]Unit name[/font_size]"
fit_content = true

[node name="UnitTags" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "human, humanoid, peasant"
label_settings = SubResource("LabelSettings_htnlb")

[node name="StatLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "	[img]res://img/buff-icons/fist.png[/img] %d	[img]res://img/buff-icons/fortify.png[/img] %d	 [img]res://img/buff-icons/mana1.png[/img] %d	 
"
fit_content = true

[node name="HPLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
fit_content = true

[node name="UnitDescription" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
text = "This is unit description that might be helluva long"
fit_content = true

[node name="AbilityBox" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
